added the admin to the build and fixed up the install
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6108 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -374,8 +374,12 @@ AC_SUBST(webaccesshelpdir)
 #
 admindir="${libexecdir}/admin"
 adminbindir="${admindir}/bin"
+adminimgdir="${admindir}/img"
+adminhelpdir="${admindir}/help"
 AC_SUBST(admindir)
 AC_SUBST(adminbindir)
+AC_SUBST(adminimgdir)
+AC_SUBST(adminhelpdir)
 
 #
 # Set pkg-config variables
@@ -548,6 +552,7 @@ src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
 src/webaccess/AssemblyInfo.cs
 src/admin/Makefile
+src/admin/AssemblyInfo.cs
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
