updated the server addition to build and install.  Also fixed a problem with make install if called multiple times when the help for web access and admin would fail
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6114 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -548,6 +548,13 @@ src/core/SyncService/Makefile
 src/core/SqliteProvider/Makefile
 src/core/libsimias/Makefile
 src/server/Makefile
+src/server/Simias.config
+src/server/simiasserver.cmd
+src/server/simiasserver
+src/server/setup/Makefile
+src/server/Simias.HttpFile/Makefile
+src/server/Simias.Rss/Makefile
+src/server/Simias.Server/Makefile
 src/webservices/Makefile
 src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
