--- a/simias/src/server/setup/Makefile.am
+++ b/simias/src/server/setup/Makefile.am
@@ -12,7 +12,7 @@ SimiasServerSetup_CSFILES_CSC := $(subst /,$(SEP),$(SimiasServerSetup_CSFILES))
 SimiasServerSetup_INCLUDES =
 SimiasServerSetup_RESOURCES = $(srcdir)/App$(ICON_EXT)
 SimiasServerSetup_FLAGS = $(CSC_EXEFLAG)
-SimiasServerSetup_LIBPATH = $(LOG4NET_DIR) ../Simias.Server $(EXTERNAL_DIR)/CSharpLDAP 
+SimiasServerSetup_LIBPATH = $(LOG4NET_DIR) ../../core/SimiasClient ../Simias.Server $(EXTERNAL_DIR)/CSharpLDAP 
 SimiasServerSetup_LIBS1 = \
 	System.dll \
 	System.Data.dll \
