--- a/simias/src/server/simiasserver.in
+++ b/simias/src/server/simiasserver.in
@@ -9,17 +9,17 @@
 #
 #######################################################################
 
-export MONO_PATH=@_webbindir_@:$MONO_PATH
+export MONO_PATH=@webbindir@:$MONO_PATH
 
 if [ "${OSTYPE:0:6}" == "darwin" ]
 then
 	echo "Increasing ulimit -n to 2048"
-	export DYLD_LIBRARY_PATH=@_webbindir_@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
+	export DYLD_LIBRARY_PATH=@webbindir@:/Library/Frameworks/Mono.framework/Versions/Current/lib:$DYLD_LIBRARY_PATH
 	ulimit -n 2048
 else
-	export LD_LIBRARY_PATH=@_webbindir_@:$LD_LIBRARY_PATH
+	export LD_LIBRARY_PATH=@webbindir@:$LD_LIBRARY_PATH
 fi
 
-cd @_bindir_@
-mono @_webbindir_@/Simias.exe --datadir @_simiasdatadir_@ --runasserver $@
+cd @bindir@
+mono @webbindir@/Simias.exe --datadir @simiasdatadir@ --runasserver $@
 
