moved project files
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/osswork@6117 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/Makefile.am
+++ b/simias/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = src
 
 DIST_SUBDIRS = $(SUBDIRS) doc package test
 
-PROJECT_FILES = $(srcdir)/SimiasLib.sln $(srcdir)/SimiasLib.csproj
+PROJECT_FILES = 
 
 # remove all of the CVS directories
 dist-hook:
