--- a/simias/configure.in
+++ b/simias/configure.in
@@ -347,7 +347,27 @@ AC_SUBST(StoreProviderAssembly)
 AC_SUBST(StoreProviderType)
 AC_SUBST(GSOAP_PATH)
 
+
 #
+#
+# Installation directory options.
+#
+# These are normally left unexpanded so users can "make install exec_prefix=/foo".
+# However, we want them expanded.
+#
+bindir="$bindir"
+sbindir="$sbindir"
+libexecdir="$libexecdir"
+datadir="$datadir"
+sysconfdir="$sysconfdir"
+sharedstatedir="$sharedstatedir"
+localstatedir="$localstatedir"
+libdir="$libdir"
+includedir="$includedir"
+infodir="$infodir"
+mandir="$mandir"
+
+
 # We have our own "standard" directories for web services.
 #
 webdir="${libexecdir}/web"
