--- a/configure.in
+++ b/configure.in
@@ -60,8 +60,7 @@ test -z "$RESGEN" && AC_MSG_ERROR([no resource generator : resgen not found])
 #
 test "x$prefix" = xNONE && prefix=$ac_default_prefix
 test "x$exec_prefix" = xNONE && exec_prefix="${prefix}"
-
-
+test $libexecdir = '${exec_prefix}/libexec' && libexecdir="${exec_prefix}/lib/simias"
 
 if test -z "$PKG_CONFIG_PATH"; then
     export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig"
@@ -205,7 +204,6 @@ case $SIMIAS_OS in
 		GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
 		#StoreProviderAssembly="SqliteProvider.dll"
 		#StoreProviderType="Simias.Storage.Provider.Sqlite.SqliteProvider"
-    	libexecdir="${exec_prefix}"
     ;;
     #
     # Linux-specific configuration
@@ -242,7 +240,6 @@ case $SIMIAS_OS in
 		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
 		GSOAP_PATH="$TOOLDIR/gsoap/linux-2.7"
-    	libexecdir="${exec_prefix}"
     ;;
     #
     # Windows-specific configuration
@@ -346,9 +343,6 @@ AC_SUBST(SHARED_LIB_EXT)
 AC_SUBST(SHARED_LIB_FLAG)
 AC_SUBST(STORELIB)
 AC_SUBST(STORELIB_PATH)
-AC_SUBST(webdir)
-AC_SUBST(webbindir)
-AC_SUBST(modulesdir)
 AC_SUBST(StoreProviderAssembly)
 AC_SUBST(StoreProviderType)
 AC_SUBST(GSOAP_PATH)
@@ -363,6 +357,29 @@ AC_SUBST(webdir)
 AC_SUBST(webbindir)
 AC_SUBST(modulesdir)
 
+#
+# Setup standard directories for webaccess app domain
+#
+webaccessdir="${libexecdir}/webaccess"
+webaccessbindir="${webaccessdir}/bin"
+webaccessimgdir="${webaccessdir}/img"
+webaccesshelpdir="${webaccessdir}/help"
+AC_SUBST(webaccessdir)
+AC_SUBST(webaccessbindir)
+AC_SUBST(webaccessimgdir)
+AC_SUBST(webaccesshelpdir)
+
+#
+# Setup standard directories for admin app domain
+#
+admindir="${libexecdir}/admin"
+adminbindir="${admindir}/bin"
+adminimgdir="${admindir}/img"
+adminhelpdir="${admindir}/help"
+AC_SUBST(admindir)
+AC_SUBST(adminbindir)
+AC_SUBST(adminimgdir)
+AC_SUBST(adminhelpdir)
 
 #
 # Set pkg-config variables
@@ -530,9 +547,13 @@ src/core/SyncService/AssemblyInfo.cs
 src/core/SyncService/Makefile
 src/core/SqliteProvider/Makefile
 src/core/libsimias/Makefile
-src/iFolder.WebService/Makefile
+src/server/Makefile
+src/webservices/Makefile
+src/webservices/AssemblyInfo.cs
 src/webaccess/Makefile
+src/webaccess/AssemblyInfo.cs
 src/admin/Makefile
+src/admin/AssemblyInfo.cs
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
