added the apache config files under setup and added them to get setup correctly in our configure scripts
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@6139 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -580,6 +580,11 @@ src/webaccess/Makefile
 src/webaccess/AssemblyInfo.cs
 src/admin/Makefile
 src/admin/AssemblyInfo.cs
+src/setup/Makefile
+src/setup/apache/Makefile
+src/setup/apache/ifolder_admin.conf
+src/setup/apache/ifolder_webaccess.conf
+src/setup/apache/simias_server.conf
 test/Makefile
 test/Common/Makefile
 test/ChangeLog/Makefile
