added defaults.config to extra dist liner
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6141 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Makefile.am
+++ b/simias/src/server/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = Simias.Server Simias.HttpFile Simias.Rss
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
-EXTRA_DIST = Simias.config.in Simias.Server.conf simiasserver.in simiasserver.cmd.in
+EXTRA_DIST = Simias.config.in Simias.Server.conf simiasserver.in simiasserver.cmd.in defaults.config.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
