updated the ifolder_admin because it was horked Also updated Global.asax.cs so it doesn't overwrite settings if it can't find environment variables
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6145 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/setup/apache/ifolder_admin.conf.in
+++ b/simias/src/setup/apache/ifolder_admin.conf.in
@@ -1,8 +1,8 @@
 Include /etc/apache2/mod_mono.conf
 
 Alias /admin "@admindir@"
-AddMonoApplications ifolder "/ifolder:@admindir@"
-<Location /ifolder >
+AddMonoApplications admin "/admin:@admindir@"
+<Location /admin >
 	MonoSetServerAlias admin
 	Order allow,deny
 	Allow from all
