updated to add the bootstrapdir
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@6148 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/configure.in
+++ b/configure.in
@@ -401,6 +401,12 @@ AC_SUBST(adminimgdir)
 AC_SUBST(adminhelpdir)
 
 #
+# Setup the bootstrapdir
+#
+bootstrapdir="${sysconfdir}/bill"
+AC_SUBST(bootstrapdir)
+
+#
 # Set pkg-config variables
 #
 PKG_CONFIG_REQUIRES=""
