--- a/simias/src/core/SimiasClient/SimiasSetup.cs.in
+++ b/simias/src/core/SimiasClient/SimiasSetup.cs.in
@@ -50,6 +50,7 @@ namespace Simias.Client
 		private static string _webdir = "@webdir@";
 		private static string _webbindir = "@webbindir@";
 		private static string _modulesdir = "@modulesdir@";
+		private static string _bootstrapdir = "@bootstrapdir@";
 		
 		// setup info
 		private static string _target = "@target@";
@@ -120,6 +121,7 @@ namespace Simias.Client
 				_webdir = Path.GetFullPath(_webdir.Replace(_prefix, value));
 				_webbindir = Path.GetFullPath(_webbindir.Replace(_prefix, value));
 				_modulesdir = Path.GetFullPath(_modulesdir.Replace(_prefix, value));
+				_bootstrapdir = Path.GetFullPath(_bootstrapdir.Replace(_prefix, value));
 				
 				// update prefix
 				_prefix = Path.GetFullPath(value);
@@ -229,13 +231,21 @@ namespace Simias.Client
 		{
 			get { return _webbindir; }
 		}
-		
+
 		/// <summary>
 		/// modulesdir
 		/// </summary>
 		public static string modulesdir
 		{
 			get { return _modulesdir; }
+		}
+
+		/// <summary>
+		/// bootstrapdir
+		/// </summary>
+		public static string bootstrapdir
+		{
+			get { return _bootstrapdir; }
 		}
 		
 		/// <summary>
