--- a/src/server/simiasserver.in
+++ b/src/server/simiasserver.in
@@ -21,5 +21,5 @@ else
 fi
 
 cd @bindir@
-mono @webbindir@/Simias.exe --datadir @simiasdatadir@ --runasserver $@
+mono @webbindir@/Simias.exe --datadir @simiasdatadir@ $@
 
