updated to handle new command line parameters and removed simiasdatadir from make step
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6156 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/Makefile.am
+++ b/simias/src/server/Simias.Server/Makefile.am
@@ -45,7 +45,7 @@ endif
 endif
 
 install-exec-local: all
-	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(simiasdatadir) $(simiasdatadir)/modules
+	$(mkinstalldirs) $(DESTDIR)$(webbindir) 
 	$(INSTALL_PROGRAM) DomainService.asmx IdentitySyncManager.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) Registration.asmx $(DEBUG_FILES) $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) $(SERVER_ASSEMBLIES) $(DEBUG_CHECK_FILES) $(DESTDIR)$(webbindir)
