--- a/src/server/usercmd/Makefile.am
+++ b/src/server/usercmd/Makefile.am
@@ -56,6 +56,7 @@ else
 	$(INSTALL_PROGRAM) UserCmd.exe $(DEBUG_FILES) $(DESTDIR)$(libexecdir)/bin
 	$(INSTALL_PROGRAM) simias-create-user $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) simias-delete-user $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) simias-user $(DESTDIR)$(bindir)
 endif
 
 uninstall-local:
@@ -63,7 +64,7 @@ if WINDOWS
 	cd $(DESTDIR)$(bindir); rm -f UserCmd.exe $(DEBUG_FILES)
 else
 	cd $(DESTDIR)$(libexecdir)/bin; rm -f UserCmd.exe $(DEBUG_FILES)
-	cd $(DESTDIR)$(bindir); rm -f simias-create-user simias-delete-user
+	cd $(DESTDIR)$(bindir); rm -f simias-create-user simias-delete-user simias-user
 endif
 
 installcheck-local: install
